--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-112819.htm" title="荣耀路由器Vmess详尽配置及使用指南">荣耀路由器Vmess详尽配置及使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-112476.htm" title="深入解析Vmess技术原理及其应用">深入解析Vmess技术原理及其应用</a></li>
-                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-113723.htm" title="魔戒Clash节点官网使用与配置详解：让科学上网更轻松">魔戒Clash节点官网使用与配置详解：让科学上网更轻松</a></li>
-                        <li class="py-2"><a href="/news/article-111633.htm" title="闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰">闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰</a></li>
-                        <li class="py-2"><a href="/news/article-107632.htm" title="深入解析《Clash 婉儿》：角色设计、游戏机制与实用技巧">深入解析《Clash 婉儿》：角色设计、游戏机制与实用技巧</a></li>
-                        <li class="py-2"><a href="/news/article-111639.htm" title="完整指南：如何购买并配置 Clash 套餐">完整指南：如何购买并配置 Clash 套餐</a></li>
-                        <li class="py-2"><a href="/news/article-109098.htm" title="玩转V2Ray新手利器：Flyzy一键工具全面解析与实用指南">玩转V2Ray新手利器：Flyzy一键工具全面解析与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-108302.htm" title="Vmess与Shadowsocks速度大比拼：哪个协议更适合你？">Vmess与Shadowsocks速度大比拼：哪个协议更适合你？</a></li>
+                        <li class="py-2"><a href="/news/article-109102.htm" title="解锁日服新天地：Nintendo Switch 科学上网全攻略">解锁日服新天地：Nintendo Switch 科学上网全攻略</a></li>
                         <li class="py-2"><a href="/news/article-110826.htm" title="网件6300科学上网详尽指南：从安装到优化全方位解析">网件6300科学上网详尽指南：从安装到优化全方位解析</a></li>
+                        <li class="py-2"><a href="/news/article-114302.htm" title="完整指南：如何在智能电视上使用 v2ray 打破网络限制">完整指南：如何在智能电视上使用 v2ray 打破网络限制</a></li>
+                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-109943.htm" title="Quantumult到底是干什么用的？全面解析与使用教程">Quantumult到底是干什么用的？全面解析与使用教程</a></li>
+                        <li class="py-2"><a href="/news/article-108302.htm" title="Vmess与Shadowsocks速度大比拼：哪个协议更适合你？">Vmess与Shadowsocks速度大比拼：哪个协议更适合你？</a></li>
+                        <li class="py-2"><a href="/news/article-113121.htm" title="全面解析Shadowrocket游戏：使用教程与配置指南">全面解析Shadowrocket游戏：使用教程与配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-107632.htm" title="深入解析《Clash 婉儿》：角色设计、游戏机制与实用技巧">深入解析《Clash 婉儿》：角色设计、游戏机制与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
+                        <li class="py-2"><a href="/news/article-112476.htm" title="深入解析Vmess技术原理及其应用">深入解析Vmess技术原理及其应用</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
