--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -119,21 +119,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://168.138.167.139/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">星辰VPN（点击注册）</a>】</p>
 
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="color:red;">农夫山泉</a>】</h3>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="TEAyo1QK" rel="nofollow noopener" style="color:red;">狗狗加速</a>】</h3>
+                        <p>狗狗加速作为第一家上线Hysteria1协议的机场，目前已经全面上线Hysteria2协议；不同于hy1，hy2全面优化了链接速度(0-RTT)，进一步降低延迟；同时使用全新的带宽控制方式；能发挥您带宽的最大潜能！全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="TEAyo1QK" rel="nofollow noopener" style="color:red">狗狗加速（点击注册）</a>】<br></p>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="color:red;">农夫山泉</a>】</h3>
                         <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">农夫山泉（点击注册）</a>】</p>
-
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://146.235.19.94/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="color:red;">西游云</a>】</h3>
-                        <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
-IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
-
-
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://146.235.19.94/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">西游云（点击注册）</a>】</p>
 
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>
                         <p>&nbsp;</p>
@@ -148,7 +143,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                         <p><strong>sing-box订阅链接</strong></p>
                         <div class="xcblog-singbox-box"></div>
                         <p>&nbsp;</p>
-                        <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
+                        <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-code="FDn6IwOG" rel="nofollow noopener" style="color:#c00;">山水云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -158,16 +153,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-114030.htm" title="SSR与V2Ray终极对决：翻墙利器谁主沉浮？">SSR与V2Ray终极对决：翻墙利器谁主沉浮？</a></li>
-                        <li class="py-2"><a href="/news/article-112476.htm" title="深入解析Vmess技术原理及其应用">深入解析Vmess技术原理及其应用</a></li>
-                        <li class="py-2"><a href="/news/article-109098.htm" title="玩转V2Ray新手利器：Flyzy一键工具全面解析与实用指南">玩转V2Ray新手利器：Flyzy一键工具全面解析与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-108299.htm" title="好游快爆科学上网全攻略：畅享游戏世界，提升下载速度与安全性">好游快爆科学上网全攻略：畅享游戏世界，提升下载速度与安全性</a></li>
-                        <li class="py-2"><a href="/news/article-113428.htm" title="从零开始：用 VSSPanel 一键搭建 V2Ray 后端的完整实战指南">从零开始：用 VSSPanel 一键搭建 V2Ray 后端的完整实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-108302.htm" title="Vmess与Shadowsocks速度大比拼：哪个协议更适合你？">Vmess与Shadowsocks速度大比拼：哪个协议更适合你？</a></li>
                         <li class="py-2"><a href="/news/article-112819.htm" title="荣耀路由器Vmess详尽配置及使用指南">荣耀路由器Vmess详尽配置及使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-111639.htm" title="完整指南：如何购买并配置 Clash 套餐">完整指南：如何购买并配置 Clash 套餐</a></li>
                         <li class="py-2"><a href="/news/article-112116.htm" title="如何使用V2Ray突破版权限制：全面指南">如何使用V2Ray突破版权限制：全面指南</a></li>
-                        <li class="py-2"><a href="/news/article-112475.htm" title="如何使用Clash进行在线订阅转换的详细指南">如何使用Clash进行在线订阅转换的详细指南</a></li>
-                        <li class="py-2"><a href="/news/article-109943.htm" title="Quantumult到底是干什么用的？全面解析与使用教程">Quantumult到底是干什么用的？全面解析与使用教程</a></li>
+                        <li class="py-2"><a href="/news/article-111639.htm" title="完整指南：如何购买并配置 Clash 套餐">完整指南：如何购买并配置 Clash 套餐</a></li>
+                        <li class="py-2"><a href="/news/article-115851.htm" title="Clash没网了怎么办？一次性解决代理打开却断网的深层问题">Clash没网了怎么办？一次性解决代理打开却断网的深层问题</a></li>
+                        <li class="py-2"><a href="/news/article-109102.htm" title="解锁日服新天地：Nintendo Switch 科学上网全攻略">解锁日服新天地：Nintendo Switch 科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
+                        <li class="py-2"><a href="/news/article-112115.htm" title="解密Surfboard苹果：一款融合科技与体验的智能设备全解析">解密Surfboard苹果：一款融合科技与体验的智能设备全解析</a></li>
+                        <li class="py-2"><a href="/news/article-114626.htm" title="深度解析车clash：提升汽车安全的关键">深度解析车clash：提升汽车安全的关键</a></li>
+                        <li class="py-2"><a href="/news/article-112476.htm" title="深入解析Vmess技术原理及其应用">深入解析Vmess技术原理及其应用</a></li>
                     </ul>
     </div>
 </div>
@@ -179,7 +174,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
